9.6.1 compatibility